--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="preloader">
+        <h1 class="reveal-text">
+            <span>T</span><span>R</span><span>I</span><span>C</span><span>E</span><span>L</span><span>E</span><span>R</span><span>A</span><span>T</span><span>E</span>
+            <span class="space"></span> <span>2</span><span>.</span><span>0</span>
+        </h1>
+    </div>
+
     <div class="event-card">
         <header>
             <h1>Tricelerate <span class="gradient-text-2-0">2.0</span></h1>
